# snippets-c

./: .gitignore  README.md  argcargv.c  codeblocks.c  digitHistograms.c  helloworl.c  helloworld.c  helo  ncurses-window.c  objdump.asm  simpleWriteToFile.c  voidparameter.c
BEAUTIFUL/: digitHistograms.c
CRAP/: argp  argp.c  getopt  getopt.c  optlongthinggnu.c
crapstack-archive/: 001_cooler-hello-world.c  003_printf-stuff.c  005_def-constants-&-arrays.c  007_cursed-main-recursion.c  017_modulo.c  021_two-for-loops.c  023_cursed-sqrt-app.c  026_pl-basic-switch-case.c  030.2_header-file.h  035_stdbol.c  037_exponent-floats.c  045_radian-sin-math.c  049_macro-multiplication-quirks.c  052_entire-function-in-a-macro.c  054_conditional-compilation-AKA-ifelse-preprocessor-directives.c  059_weird-function-stuff.c  062_comment-line-splicing.c  064_enum.c  068_ctrl-z-loop.c  069_conio-getc.c  079_multiplication-table.c  081_logic-operator.c  082_not-operator.c  084_crappy-switch-calculator.c  086_reverse-string-with-strlen-&-strcmp.c  089_my-beloved-pointers-and-dereference.c  090_variables-and-extern.c  091_global-variable.c  095_simple-function-prototype.c  098_global-redeclaration.c  100_simple-static-variable.c  102_temp-converter-function-returning-array.c  106_unreadable-sizeof-experiments.c  108_integer-promotion.c  109_weird-double-promotion-rules.c  112_implicit-typecasting.c  113_explicit-typecasting.c  114_static-and-not-static.c  115_thingy.h  116_const-pointer-silliness.c  (+32 more)
crapstack_files/092_cmake-extern/src/: CMakeLists.txt  extern.c
(+112 files in other folders)
